--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.13.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
