feat: Add new images and configuration for blog documentation
- Added author images: arghya.png and dillion.png
- Added blog image: next-response-with-typescript.png
- Added various thumbnail images for React and Next.js templates
- Created source.config.ts for blog documentation configuration
- Updated tsconfig.json to include new source path
- Introduced custom TypeScript types for blog data and posts in index.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/.source": ["./.source"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".source"]
 }
